--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,7 @@ services:
       - "8889:8889"   # Prometheus exporter metrics
       - "13133:13133" # health_check extension
       - "4318:4318"   # otlp http reciever
+      - "4317:4317"   # otlp grpc reciever
       - "55679:55679" # zpages extension
     depends_on:
       - jaeger-all-in-one
